@@ -218,14 +218,9 @@ increased program load times.
 @item --enable-pt_chown
 The file @file{pt_chown} is a helper binary for @code{grantpt}
 (@pxref{Allocation, Pseudo-Terminals}) that is installed setuid root to
-fix up pseudo-terminal ownership.  It is not built by default because
-systems using the Linux kernel are commonly built with the @code{devpts}
-filesystem enabled and mounted at @file{/dev/pts}, which manages
-pseudo-terminal ownership automatically.  By using
-@samp{--enable-pt_chown}, you may build @file{pt_chown} and install it
-setuid and owned by @code{root}.  The use of @file{pt_chown} introduces
-additional security risks to the system and you should enable it only if
-you understand and accept those risks.
+fix up pseudo-terminal ownership on GNU/Hurd.  It is not required on
+GNU/Linux, and @theglibc{} will not use the installed @file{pt_chown}
+program when configured with @option{--enable-pt_chown}.
 
 @item --disable-werror
 By default, @theglibc{} is built with @option{-Werror}.  If you wish
